--- a/webapp/requirements.txt
+++ b/webapp/requirements.txt
@@ -8,6 +8,8 @@ click==8.1.3
     # via flask
 flask==2.1.2
     # via -r requirements.in
+gunicorn==20.1.0
+    # via -r requirements.in
 importlib-metadata==4.11.3
     # via flask
 itsdangerous==2.1.2
@@ -22,3 +24,6 @@ werkzeug==2.1.2
     # via flask
 zipp==3.8.0
     # via importlib-metadata
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
