--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dominant_colours"
-version = "1.1.1"
+version = "1.1.2"
 edition = "2018"
 
 [dependencies]
@@ -14,7 +14,7 @@ default-features = false
 
 [dependencies.image]
 version = "0.24"
-features = ["jpeg", "png", "gif"]
+features = ["jpeg", "png", "gif", "tiff"]
 default-features = false
 
 [dependencies.palette]
