tar for all platforms

--- a/.github/workflows/upload_binaries.yml
+++ b/.github/workflows/upload_binaries.yml
@@ -36,7 +36,7 @@ jobs:
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
           bin: dominant_colours
-          tar: unix
+          tar: all
           zip: windows
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
