--- a/.github/workflows/upload_binaries.yml
+++ b/.github/workflows/upload_binaries.yml
@@ -35,6 +35,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
+          target: ${{ matrix.target }}
           bin: dominant_colours
           tar: all
           zip: windows
