--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 [dependencies]
 assert_cmd = "2.0.5"
 clap = "4.0.18"
+rand = "0.8.5"
 
 [dependencies.kmeans_colors]
 version = "0.5.0"
