--- a/.github/workflows/upload_binaries.yml
+++ b/.github/workflows/upload_binaries.yml
@@ -22,15 +22,18 @@ jobs:
         include:
           - target: aarch64-unknown-linux-gnu
           - target: aarch64-unknown-linux-musl
-          - target: aarch64-apple-darwin
-            os: macos-11
           - target: x86_64-unknown-linux-gnu
           - target: x86_64-unknown-linux-musl
+
+          - target: aarch64-apple-darwin
+            os: macos-latest
           - target: x86_64-apple-darwin
-            os: macos-10.15
+            os: macos-latest
+
           - target: x86_64-pc-windows-msvc
-            os: windows-2019
-    runs-on: ${{ matrix.os || 'ubuntu-20.04' }}
+            os: windows-latest
+
+    runs-on: ${{ matrix.os || 'ubuntu-latest' }}
     steps:
       - uses: actions/checkout@v4
       - uses: taiki-e/upload-rust-binary-action@v1
