Add a schedule to my Dependabot updates
For https://github.com/alexwlchan/alexwlchan/issues/8

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,9 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+      time: "09:00"
   - package-ecosystem: "cargo"
     directory: "/"
     schedule:
       interval: "daily"
+      time: "09:00"
