--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 [dependencies]
 assert_cmd = "2.0.14"
 clap = "4.5.7"
+regex = "1.10.5"
 
 [dependencies.kmeans_colors]
 version = "0.6.0"
