Fix a bug when getting colours for a non-animated WebP
I tried to get dominant colours for a WebP image (a thumbnail of a YouTube
video) and it was failing with an assertion inside kmeans-colors:

    $ RUST_BACKTRACE=1 dominant_colours src/tests/purple.webp
    thread 'main' panicked at kmeans_colors-0.6.0/src/plus_plus.rs:24:5:
    assertion failed: len > 0
    stack backtrace:
       0: _rust_begin_unwind
       1: core::panicking::panic_fmt
       2: core::panicking::panic
       3: kmeans_colors::plus_plus::init_plus_plus
       4: kmeans_colors::kmeans::get_kmeans_hamerly
       5: dominant_colours::main

These are the lines where it's failing [1]:

    let len = buf.len();
    assert!(len > 0);

That `buf` variable is the list of colors we extract from an image in
`get_image_colors`.  I added a couple of internal assertions to this
tool, and discovered we're getting an empty list of colours for
non-animated WebP images.

This wasn't caught by the tests because they were just checking that
`get_image_colors` returns an Ok() result, but not inspecting its value.
I've strengthened the tests to check it returns a non-empty list.

Why are there 0 colours for a non-animated WebP image?  Because we were
assuming we could treat all WebP images as animated, and passing them to
`get_bytes_for_animated_image`.  Then we could extract a list of frames,
and for a non-animated image this would be a list with a single frame:

    let image_bytes = match format {
        ImageFormat::WebP => {
            let decoder = WebPDecoder::new(reader)?;
            get_bytes_for_animated_image(decoder)
        }

        …
    };

    …

    fn get_bytes_for_animated_image<'a>(decoder) -> Vec<u8> {
        let frames = decoder.into_frames().collect_frames().unwrap();

This approach comes from the way the image crate handles GIF images --
for non-animated GIFs, this is a list with a single frame.

But WebP images are different, and we get an empty list here!

Initially I thought this 

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "dominant_colours"
-version = "1.4.0"
+version = "1.4.1"
 edition = "2018"
 
 [dependencies]
 assert_cmd = "2.0.16"
 clap = { version = "4.5.20", features = ["derive"] }
+image-webp = "0.2.0"
 regex = "1.11.1"
 
 [dependencies.kmeans_colors]
